--- a/lesson3/project/css/style.css
+++ b/lesson3/project/css/style.css
@@ -17,6 +17,7 @@ button{
     font-weight: bold;
 }
 .btn-cart{
+    position: relative;
     background-color: #fafafa;
     padding: 10px 20px;
     border: 1px solid transparent;
@@ -74,4 +75,25 @@ img {
     background-color: transparent;
     border-color: #2f2a2d;
     color: #2f2a2d;
+}
+
+.hidden {
+    display: none;
+}
+
+.cart {
+    position: absolute;
+    right: 10px;
+    top: 80px;
+    background: black;
+    padding: 20px;
+}
+
+.cart-item {
+    display: flex;
+    padding-bottom: 20px;
+}
+
+.cart-item:last-child {
+    padding-bottom: 0;
 }
